# docs/swagger.yaml
@@ -8,6 +8,31 @@ definitions:
         example: false
         type: boolean
     type: object
+  controllers_swagger.AuthSignupConfirmOtpBadResponse:
+    properties:
+      message:
+        example: string
+        type: string
+      succeed:
+        example: false
+        type: boolean
+      token:
+        example: ""
+        type: string
+    type: object
+  dtos.AuthSignupConfirmOtpRequest:
+    properties:
+      otpCode:
+        example: "1234"
+        type: string
+      phoneNumber:
+        example: "09123456789"
+        maxLength: 11
+        minLength: 11
+        type: string
+    required:
+    - phoneNumber
+    type: object
   dtos.AuthSignupRequest:
     properties:
       phoneNumber:
@@ -26,6 +51,18 @@ definitions:
       succeed:
         example: true
         type: boolean
+    type: object
+  dtos.AuthTokenResponse:
+    properties:
+      message:
+        example: Succeed
+        type: string
+      succeed:
+        example: true
+        type: boolean
+      token:
+        example: the token will be here
+        type: string
     type: object
 info:
   contact: {}
@@ -55,4 +92,28 @@ paths:
           schema:
             $ref: '#/definitions/controllers_swagger.AuthSignupBadResponse'
       summary: Signup Method
+  /auth/signup/confirm-otp:
+    post:
+      consumes:
+      - application/json
+      description: Validate the PhoneNumber with the OtpCode alongside withit
+      parameters:
+      - description: AuthSignupConfirmOtpRequest model
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dtos.AuthSignupConfirmOtpRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dtos.AuthTokenResponse'
+        "400":
+          description: Request body is not valid
+          schema:
+            $ref: '#/definitions/controllers_swagger.AuthSignupConfirmOtpBadResponse'
+      summary: Signup Confirm Otp Method
 swagger: "2.0"
