# dtos/auth.go
@@ -13,12 +13,12 @@ type AuthLoginRequest struct {
 }
 
 type AuthSignupConfirmOtpRequest struct {
-	PhoneNumber string `json:"phoneNumber" binding:"required,min=11,max=11"`
-	OtpCode     string `json:"otpCode"`
+	PhoneNumber string `json:"phoneNumber" binding:"required,min=11,max=11" example:"09123456789"`
+	OtpCode     string `json:"otpCode" example:"1234"`
 }
 
 type AuthTokenResponse struct {
-	Succeed bool
-	Message string
-	Token   string
+	Succeed bool   `example:"true"`
+	Message string `example:"Succeed"`
+	Token   string `example:"the token will be here"`
 }
